# CARDS

./: .gitignore  BUILD.bazel  TODO.txt  analyze.py  run.bat  run.sh
src/: main.c
src/core/: game.c  game.h  input.c  input.h  logger.h
src/data/: baked.h  collisionmap.h  datamap.c  datamap.h  gconfig.h
src/objects/: projectile.c  projectile.h
src/scenes/: corescene.c  corescene.h  startscene.c  startscene.h
src/utils/: datastructs.c  datastructs.h  timeutils.c  timeutils.h
