cc_library(
    name = "win_raylib",
    hdrs = glob(["vendor/raylib/include/*.h"]),
    includes = ["vendor/raylib/include"],
    srcs = ["vendor/raylib/lib/raylib.lib"],
    visibility = ["//visibility:public"],
)

cc_library(
	name = "lin_raylib",
	hdrs = glob(["vendor/raylib/include/*.h"]),
	includes = ["vendor/raylib/include"],
	srcs = ["vendor/raylib/lib/libraylib.a"],
	visibility = ["//visibility:public"],
)

cc_library(
    name = "win_game_lib",
    includes = ["src"],
    srcs = glob(["src/**/*.c"]),
    hdrs = glob(["src/**/*.h"]),
    deps = [
        "//platform:win_deps",
        ":win_raylib",
    ],
)

cc_library(
    name = "lin_game_lib",
    includes = ["src"],
    srcs = glob(["src/**/*.c"]),
    hdrs = glob(["src/**/*.h"]),
	deps = [
		":lin_raylib",
	],
)

cc_binary(
    name = "windows_binary",
    srcs = ["src/main.c"],
    deps = [
        ":win_game_lib"
    ],
)

cc_binary(
	name = "linux_binary",
	srcs = ["src/main.c"],
	deps = [
		":lin_game_lib",
	],
)
